fix iframe overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -208,6 +208,11 @@ ol, ul {
   max-width: 100%;
   word-wrap: break-word;
 
+  iframe {
+    width: 100%;
+    border-radius: 3px;
+  }
+
   img {
     display: block;
     width: 100%;
